# malloc

./: .env.example  .env.example.amd64  .gitignore  .gitmodules  CMakeLists.txt  Makefile  alloc.h  alloc_error.h  allocator.h  malloc.h
.github/: README.md
.github/hooks/: pre-commit
calcs/: calc_bin_width.py  calc_exp_func.py  calc_smallbin.py  plot_bin_width_func.py
includes/: alloc.h  bonus.h  debug.h  flags.h  freelist.h  init.h  lists.h  malloc.h  malloc_internal.h  page_size.h  print.h  utils.h
srcs/: alloc.c  alloc_debug.c  alloc_error.c  allocate.c  allocator.c  calloc.c  flags.c  free.c  freelst.c  init.c  magazine_malloc.c  malloc.c  malloc_init.c  map.c  page_size.c  print_malloc.c  realloc.c  show_alloc_heap.c  show_alloc_mem.c  show_free_list.c  valloc.c
srcs/bonus/: consolidation.c  debug.c  defragment_chunks.c  extend_region.c  print.c  print_alloc.c  print_format.c  set_flag.c  show_alloc_heap.c  show_alloc_mem_ex.c  show_freelist.c
srcs/lists/: lst_malloc_chunk.c  lst_mmap_chunk.c
srcs/utils/: align.c  alignment.c  error.c  extend_region.c  freelist.c  get_page_size.c  is_allocated.c  lst_malloc_chunk.c  lst_mmap_chunk.c  mmap_by_size.c  page_size.c  remaindering.c  split_chunk.c
test/: CMakeLists.txt  benchmark.sh  main.c  run.sh  run_benchmark.sh  run_test.sh  test.c  test2.c  test_malloc.cc  test_realloc.cc
test/check/: c_free.c  c_malloc.c  c_realloc.c
test/correction/: test.c  test0.c  test1.c  test10.c  test11.c  test15.c  test16.c  test17.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c  test_bench.c
(+10 files in other folders)
